# claude-usage-widget

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: index.html
scripts/: make-hero.mjs  make-preview.mjs
src/: api.ts  format.ts  main.ts  preview.ts  state.ts  styles.css  types.ts
src-tauri/: Cargo.toml  generate-icon.mjs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: credentials.rs  lib.rs  pricing.rs  sources.rs  stats.rs  transcripts.rs  usage.rs  wsl.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  discovery.rs  lib.rs  main.rs
src/ui/: app.ts  chart.ts  gauge.ts
