[package]
name = "claude-usage-widget"
version = "0.1.0"
description = "Always-on-top Windows widget for Claude subscription usage"
edition = "2021"
rust-version = "1.77"

[lib]
# The `_lib` suffix avoids a name clash with the binary on Windows.
name = "claude_usage_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
claude-usage-core = { path = "core" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
members = ["core"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
